--- a/languages/wc-bacs-paybysquare-sk_SK.po
+++ b/languages/wc-bacs-paybysquare-sk_SK.po
@@ -1,18 +1,20 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2017-11-17 22:33+0100\n"
-"PO-Revision-Date: 2017-11-17 22:33+0100\n"
-"Last-Translator: \n"
+"POT-Creation-Date: 2021-02-24 13:51+0100\n"
+"PO-Revision-Date: 2021-02-24 14:13+0100\n"
+"Last-Translator: Matej Kravjar <matej.kravjar@gmail.com>\n"
 "Language-Team: \n"
 "Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.4\n"
+"X-Generator: Poedit 2.4.2\n"
 "X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Poedit-KeywordsList: __;esc_html__\n"
+"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:2c,1;_ex:2c,1;_nx:4c,1,2;esc_attr__;"
+"esc_attr_e;esc_attr_x:2c,1;esc_html__;esc_html_e;esc_html_x:2c,1;"
+"_n_noop:1,2;_nx_noop:3c,1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: class-wc-bacs-paybysquare.php:62
@@ -35,70 +37,72 @@ msgstr "Meno osoby alebo názov organizácie prijímajúcej peniaze"
 msgid "Username"
 msgstr "Používateľské meno"
 
-#: class-wc-bacs-paybysquare.php:85
+#: class-wc-bacs-paybysquare.php:86
 #, php-format
 msgid "Your Username for %s service"
 msgstr "Používateľské meno pre službu %s"
 
-#: class-wc-bacs-paybysquare.php:90
+#: class-wc-bacs-paybysquare.php:91
 msgid "Password"
 msgstr "Heslo"
 
-#: class-wc-bacs-paybysquare.php:92
+#: class-wc-bacs-paybysquare.php:94
 #, php-format
 msgid "Your Password for %s service"
 msgstr "Heslo pre službu %s"
 
-#: class-wc-bacs-paybysquare.php:97
+#: class-wc-bacs-paybysquare.php:99
 msgid "Checkout information"
 msgstr "Informácia v pokladni"
 
-#: class-wc-bacs-paybysquare.php:99
+#: class-wc-bacs-paybysquare.php:101
 msgid "Text appended to your BACS title, advertising QR code availability"
 msgstr ""
 "Text, ktorý sa zobrazí pri názve priamej platby na účet, informujúci o "
 "prítomnosti QR kódu"
 
-#: class-wc-bacs-paybysquare.php:100
-msgid "(payment QR code PAY by square)"
-msgstr "(platobný QR kód PAY by square)"
+#: class-wc-bacs-paybysquare.php:102
+msgid "(payment QR code)"
+msgstr "(platobný QR kód)"
 
-#: class-wc-bacs-paybysquare.php:113
+#: class-wc-bacs-paybysquare.php:106
+msgid "Display QR code"
+msgstr "Zobraziť QR kód"
+
+#: class-wc-bacs-paybysquare.php:107
+msgid "Setting controlling which type of QR should be displayed"
+msgstr "Nastavenie určuje ktorý QR kód bude zobrazený zákazníkovi"
+
+#: class-wc-bacs-paybysquare.php:110
+msgid "PAY by square (Slovak)"
+msgstr "PAY by square (slovenský)"
+
+#: class-wc-bacs-paybysquare.php:111
+msgid "QR platba (Czech)"
+msgstr "QR Platba (český)"
+
+#: class-wc-bacs-paybysquare.php:112
+msgid "Automatic (based on currency)"
+msgstr "Automaticky (na základe meny)"
+
+#: class-wc-bacs-paybysquare.php:128
 msgid "Your limit of generated QR codes was depleted"
 msgstr "Prekročili ste váš limit generovaných QR kódov"
 
-#: class-wc-bacs-paybysquare.php:114
+#: class-wc-bacs-paybysquare.php:130
 #, php-format
 msgid "To generate more this month, you need to upgrade your program at %s"
 msgstr ""
 "Na to, aby ste tento mesiac mohli vygenerovať ďalšie, potrebujete prejsť na "
 "vyšší program na stránke %s"
 
-#: class-wc-bacs-paybysquare.php:117
+#: class-wc-bacs-paybysquare.php:134
 #, php-format
 msgid "To learn more about the service, please visit %s"
 msgstr "Pre viac informácií o službe, prosím navštívte %s"
 
-#: class-wc-bacs-paybysquare.php:167
+#: class-wc-bacs-paybysquare.php:184
 msgid "For convenient payment, scan this QR code with your banking app:"
 msgstr ""
 "Pre jednoduchú úhradu naskenujte tento QR kód mobilnou aplikáciou vašej "
 "banky:"
-
-#~ msgid "Buy as a company"
-#~ msgstr "Nákup na firmu / živnosť"
-
-#~ msgid "Type of buying"
-#~ msgstr "Druh nákupu"
-
-#~ msgid "VAT ID"
-#~ msgstr "IČ DPH"
-
-#~ msgid "ID"
-#~ msgstr "IČO"
-
-#~ msgid "Tax ID"
-#~ msgstr "DIČ"
-
-#~ msgid "Buy as a private person"
-#~ msgstr "Nákup ako fyzická osoba"
