--- a/languages/wc-bacs-paybysquare-sk_SK.po
+++ b/languages/wc-bacs-paybysquare-sk_SK.po
@@ -1,125 +1,138 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-04-29 13:55+0200\n"
-"PO-Revision-Date: 2021-04-29 13:55+0200\n"
+"Report-Msgid-Bugs-To: \n"
 "Last-Translator: Matej Kravjar <matej.kravjar@gmail.com>\n"
 "Language-Team: \n"
-"Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.3\n"
-"X-Poedit-Basepath: ..\n"
+"POT-Creation-Date: 2023-12-18 16:08+0100\n"
+"PO-Revision-Date: 2023-12-18 16:11+0100\n"
+"Language: sk\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:2c,1;_ex:2c,1;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:2c,1;esc_html__;esc_html_e;esc_html_x:2c,1;_n_noop:1,2;"
-"_nx_noop:3c,1,2\n"
+"X-Generator: Poedit 3.4.1\n"
+"X-Poedit-Basepath: ..\n"
+"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:2c,1;_ex:2c,1;_nx:4c,1,2;esc_attr__;esc_attr_e;esc_attr_x:2c,1;esc_html__;esc_html_e;esc_html_x:2c,1;_n_noop:1,2;_nx_noop:3c,1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 
-#: class-wc-bacs-paybysquare.php:64
+#: src/class-plugin.php:134
 msgid "Settings"
 msgstr "Nastavenia"
 
-#: class-wc-bacs-paybysquare.php:73
+#: src/class-plugin.php:149
 msgid "PAY by square Settings"
 msgstr "Nastavenia PAY by square"
 
-#: class-wc-bacs-paybysquare.php:78 class-wc-bacs-paybysquare.php:90
+#: src/class-plugin.php:154
+#: src/class-plugin.php:168
 msgid "Beneficiary name"
 msgstr "Príjemca platby"
 
-#: class-wc-bacs-paybysquare.php:80
+#: src/class-plugin.php:156
 msgid "Name of person or organization receiving money"
 msgstr "Meno osoby alebo názov organizácie prijímajúcej peniaze"
 
-#: class-wc-bacs-paybysquare.php:89
+#. translators: %s: field name
+#: src/class-plugin.php:167
 #, php-format
 msgid "Field \"%s\" does contain character, that is invalid for Czech QR code."
 msgstr "Pole „%s“ obsahuje znak, ktorý nie je povolený pre český QR kód."
 
-#: class-wc-bacs-paybysquare.php:93
+#: src/class-plugin.php:171
 msgid "If you are not using Czech QR code, you may safely ignore this warning."
-msgstr ""
-"Pokiaľ český QR kód nepoužívate, môžte toto upozornenie pokojne ignorovať."
+msgstr "Pokiaľ český QR kód nepoužívate, môžte toto upozornenie pokojne ignorovať."
 
-#: class-wc-bacs-paybysquare.php:97
+#. translators: 1: valid digits, 2: valid letters, 3: valid symbols
+#: src/class-plugin.php:175
 #, php-format
-msgid ""
-"Valid characters are digits %1$s, letters %2$s, a space, and symbols %3$s"
-msgstr ""
-"Povolené znaky sú číslice %1$s, písmená %2$s, medzera, a špeciálne znaky %3$s"
+msgid "Valid characters are digits %1$s, letters %2$s, a space, and symbols %3$s"
+msgstr "Povolené znaky sú číslice %1$s, písmená %2$s, medzera, a špeciálne znaky %3$s"
 
-#: class-wc-bacs-paybysquare.php:109
+#: src/class-plugin.php:188
 msgid "Username"
 msgstr "Používateľské meno"
 
-#: class-wc-bacs-paybysquare.php:112
+#. translators: %s: service name
+#: src/class-plugin.php:191
 #, php-format
 msgid "Your Username for %s service"
 msgstr "Používateľské meno pre službu %s"
 
-#: class-wc-bacs-paybysquare.php:117
+#: src/class-plugin.php:196
 msgid "Password"
 msgstr "Heslo"
 
-#: class-wc-bacs-paybysquare.php:120
+#. translators: %s: service name
+#: src/class-plugin.php:199
 #, php-format
 msgid "Your Password for %s service"
 msgstr "Heslo pre službu %s"
 
-#: class-wc-bacs-paybysquare.php:125
+#: src/class-plugin.php:204
 msgid "Checkout information"
 msgstr "Informácia v pokladni"
 
-#: class-wc-bacs-paybysquare.php:127
+#: src/class-plugin.php:206
 msgid "Text appended to your BACS title, advertising QR code availability"
-msgstr ""
-"Text, ktorý sa zobrazí pri názve priamej platby na účet, informujúci o "
-"prítomnosti QR kódu"
+msgstr "Text, ktorý sa zobrazí pri názve priamej platby na účet, informujúci o prítomnosti QR kódu"
 
-#: class-wc-bacs-paybysquare.php:128
+#: src/class-plugin.php:207
 msgid "(payment QR code)"
 msgstr "(platobný QR kód)"
 
-#: class-wc-bacs-paybysquare.php:132
+#: src/class-plugin.php:211
 msgid "Display QR code"
 msgstr "Zobraziť QR kód"
 
-#: class-wc-bacs-paybysquare.php:133
+#: src/class-plugin.php:212
 msgid "Setting controlling which type of QR should be displayed"
 msgstr "Nastavenie určuje ktorý QR kód bude zobrazený zákazníkovi"
 
-#: class-wc-bacs-paybysquare.php:136
+#: src/class-plugin.php:215
 msgid "PAY by square (Slovak)"
 msgstr "PAY by square (slovenský)"
 
-#: class-wc-bacs-paybysquare.php:137
+#: src/class-plugin.php:216
 msgid "QR platba (Czech)"
 msgstr "QR Platba (český)"
 
-#: class-wc-bacs-paybysquare.php:138
+#: src/class-plugin.php:217
 msgid "Automatic (based on currency)"
 msgstr "Automaticky (na základe meny)"
 
-#: class-wc-bacs-paybysquare.php:154
+#: src/class-plugin.php:244
 msgid "Your limit of generated QR codes was depleted"
 msgstr "Prekročili ste váš limit generovaných QR kódov"
 
-#: class-wc-bacs-paybysquare.php:156
+#. translators: %s: service link
+#: src/class-plugin.php:246
 #, php-format
 msgid "To generate more this month, you need to upgrade your program at %s"
-msgstr ""
-"Na to, aby ste tento mesiac mohli vygenerovať ďalšie, potrebujete prejsť na "
-"vyšší program na stránke %s"
+msgstr "Na to, aby ste tento mesiac mohli vygenerovať ďalšie, potrebujete prejsť na vyšší program na stránke %s"
 
-#: class-wc-bacs-paybysquare.php:160
+#. translators: %s: service link
+#: src/class-plugin.php:249
 #, php-format
 msgid "To learn more about the service, please visit %s"
 msgstr "Pre viac informácií o službe, prosím navštívte %s"
 
-#: class-wc-bacs-paybysquare.php:210
+#: src/class-plugin.php:335
 msgid "For convenient payment, scan this QR code with your banking app:"
+msgstr "Pre jednoduchú úhradu naskenujte tento QR kód mobilnou aplikáciou vašej banky:"
+
+#. Author of the plugin
+msgid "Webikon (Matej Kravjar)"
 msgstr ""
-"Pre jednoduchú úhradu naskenujte tento QR kód mobilnou aplikáciou vašej "
-"banky:"
+
+#. Author URI of the plugin
+msgid "https://webikon.sk"
+msgstr ""
+
+#. Plugin Name of the plugin
+msgid "PAY by square for WooCommerce"
+msgstr "PAY by square pre WooCommerce"
+
+#. Description of the plugin
+msgid "Adds a payment QR code on summary page of direct bank transfer"
+msgstr "Pridáva platobný QR kód na sumarizačnú stránku platby prevodom"
